Added basic client.js code

--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "node": "^9.3.0",
+    "path": "^0.12.7",
+    "request": "^2.83.0"
+  }
 }
